# gr-lora_utilities

./: .gitignore  CMakeLists.txt  Dockerfile  MANIFEST.md  docker_build_image.sh  docker_build_image_win.ps1  docker_run.sh  docker_run_win.ps1
apps/: CMakeLists.txt
cmake/Modules/: gnuradio-first_loraConfig.cmake
docs/: CMakeLists.txt  README.first_lora
docs/doxygen/: CMakeLists.txt  Doxyfile.in
docs/doxygen/doxyxml/: __init__.py  base.py  doxyindex.py  text.py
docs/doxygen/other/: group_defs.dox  main_page.dox
grc/: CMakeLists.txt  first_lora_file_writer.block.yml  first_lora_lora_detector.block.yml  first_lora_mysquare.block.yml
include/gnuradio/first_lora/: CMakeLists.txt  api.h  lora_detector.h  mysquare.h
lib/: CMakeLists.txt  lora_detector_impl.cc  lora_detector_impl.h  mysquare_impl.cc  mysquare_impl.h
python/first_lora/: CMakeLists.txt  __init__.py  file_writer.py
python/first_lora/bindings/: CMakeLists.txt  failed_conversions.txt  lora_detector_python.cc  python_bindings.cc
